feat: permissions per user
